--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -27,7 +27,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
@@ -54,7 +54,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
@@ -68,7 +68,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
