--- a/docs/turma/fpi/fpi2025-1.mdx
+++ b/docs/turma/fpi/fpi2025-1.mdx
@@ -17,7 +17,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
@@ -44,7 +44,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
@@ -58,7 +58,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
