--- a/docs/turma/fpw/fpw2025-1.mdx
+++ b/docs/turma/fpw/fpw2025-1.mdx
@@ -16,7 +16,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "FPW2025-1"
           ],
@@ -42,7 +42,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "FPW2025-1"
           ],
@@ -55,7 +55,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "FPW2025-1"
           ],
