--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -39,7 +39,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "FPW2025-1"
           ],
@@ -92,7 +92,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "FPW2025-1"
           ],
@@ -105,7 +105,7 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "FPW2025-1"
           ],
