--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_c_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_c_-_cr_toledo.mdx
@@ -35,6 +35,19 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
+        },
+        {
+          subject: "Linguagens de Apresentação e Estruturação de conteúdos",
+          size: 4,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "FPW2025-1"
+          ],
+          time: "14:00 - 14:50",
+          color: ""
         }
       ]
     },
@@ -71,7 +84,34 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Fundamentos de informática",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2025B - Grupo A"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Fundamentos de informática",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2025B - Grupo B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -87,6 +127,45 @@ export const data = {
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Linguagens de Apresentação e Estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "FPW2025-1"
+          ],
+          time: "14:00 - 14:50",
+          color: ""
+        },
+        {
+          subject: "Algoritmos e Linguagens de programação Web",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "FPW2025-1"
+          ],
+          time: "15:55 - 16:45",
           color: ""
         }
       ]
