--- a/versioned_docs/version-2025.1.5/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/versioned_docs/version-2025.1.5/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -14,7 +14,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
@@ -81,7 +81,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
@@ -95,7 +95,7 @@ export const data = {
             "Caroline Domingues Porto do Nascimento Barbieri",
             "Rafael Luis Bartz"
           ],
-          classroom: "",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "FPI2025-1"
           ],
