--- a/versioned_docs/version-2025.1.5/professor/luis_henrique_manosso_von_mecheln.mdx
+++ b/versioned_docs/version-2025.1.5/professor/luis_henrique_manosso_von_mecheln.mdx
@@ -25,7 +25,7 @@ export const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2025B"
           ],
