--- a/versioned_docs/version-2025.1.5/professor/marcia_aparecida_barbosa.mdx
+++ b/versioned_docs/version-2025.1.5/professor/marcia_aparecida_barbosa.mdx
@@ -32,34 +32,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Estágio curricular supervisionado em ciências II",
-          size: 2,
-          teachers: [
-            "Marcia Aparecida Barbosa"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: [
-            "BIO_ESPECIAL_2"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Estágio curricular supervisionado em ciências I",
-          size: 1,
-          teachers: [
-            "Marcia Aparecida Barbosa"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: [
-            "BIO_ESPECIAL_2"
-          ],
-          time: "21:00 - 21:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
