--- a/versioned_docs/version-2025.1.5/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
+++ b/versioned_docs/version-2025.1.5/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
@@ -11,14 +11,27 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projeto integrador I",
+          subject: "Projeto Integrador II",
           size: 2,
           teachers: [
             "Álvaro José de Almeida Araújo"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2025B"
+            "IIW2024B"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Sergio Ricardo Ferrazoli"
+          ],
+          classroom: "Laboratório de Informatica A - CR Toledo",
+          students: [
+            "IIW2024B"
           ],
           time: "15:05 - 15:55",
           color: ""
@@ -31,52 +44,11 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Fundamentos de informática",
-          size: 2,
-          teachers: [
-            "Sergio Ricardo Ferrazoli"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2025B - Grupo A"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Fundamentos de informática",
-          size: 2,
-          teachers: [
-            "Sergio Ricardo Ferrazoli"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2025B - Grupo B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 4,
-          teachers: [
-            "Luis Henrique Manosso Von Mecheln"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
