--- a/versioned_docs/version-2025.1.5/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
+++ b/versioned_docs/version-2025.1.5/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
@@ -24,29 +24,30 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto Integrador II",
+          subject: "Projeto integrador I",
           size: 2,
           teachers: [
             "Álvaro José de Almeida Araújo"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2024B"
+            "IIW2025B"
           ],
-          time: "13:10 - 14:00",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          subject: "Lógica de Programação",
+          size: 4,
           teachers: [
-            "Sergio Ricardo Ferrazoli"
+            "Caroline Domingues Porto do Nascimento Barbieri",
+            "Rafael Luis Bartz"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2024B"
+            "FPI2025-1"
           ],
-          time: "15:05 - 15:55",
+          time: "14:00 - 14:50",
           color: ""
         }
       ]
@@ -104,16 +105,44 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 4,
           teachers: [
-            "Sergio Ricardo Ferrazoli"
+            "Luis Henrique Manosso Von Mecheln"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2024B"
+            "IIW2025B"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Lógica de Programação",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri",
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "FPI2025-1"
+          ],
+          time: "14:00 - 14:50",
+          color: ""
+        },
+        {
+          subject: "Programação Orientada a Objetos",
+          size: 2,
+          teachers: [
+            "Caroline Domingues Porto do Nascimento Barbieri",
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "FPI2025-1"
+          ],
+          time: "15:55 - 16:45",
           color: ""
         }
       ]
