--- a/versioned_docs/version-2025.1.5/turma/iiw/iiw2024b.mdx
+++ b/versioned_docs/version-2025.1.5/turma/iiw/iiw2024b.mdx
@@ -55,7 +55,7 @@ export const data = {
           teachers: [
             "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2024B"
           ],
@@ -68,7 +68,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2024B"
           ],
@@ -226,7 +226,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2024B"
           ],
