--- a/versioned_docs/version-2025.1.5/turma/iiw/iiw2025b.mdx
+++ b/versioned_docs/version-2025.1.5/turma/iiw/iiw2025b.mdx
@@ -37,29 +37,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Filosofia I",
-          size: 1,
+          subject: "Projeto integrador I",
+          size: 2,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Sala 01 - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2025B"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        },
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2025B"
-          ],
-          time: "11:05 - 11:55",
           color: ""
         },
         {
@@ -76,16 +63,29 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto integrador I",
-          size: 2,
+          subject: "Filosofia I",
+          size: 1,
           teachers: [
-            "Álvaro José de Almeida Araújo"
+            "Fabio Antônio da Silva"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Sala 01 - CR Toledo",
           students: [
             "IIW2025B"
           ],
           time: "15:05 - 15:55",
+          color: ""
+        },
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2025B"
+          ],
+          time: "15:55 - 16:45",
           color: ""
         }
       ]
@@ -182,7 +182,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2025B - Grupo A"
           ],
@@ -221,7 +221,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2025B - Grupo B"
           ],
@@ -239,7 +239,7 @@ export const data = {
           teachers: [
             "Luis Henrique Manosso Von Mecheln"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2025B"
           ],
